revert 移除Lazy Val警告提示